Fixed line-height of submenu items on mobile.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -925,6 +925,10 @@ section.disclaimer {
     line-height: 1rem;
   }
 
+  .submenu a {
+    line-height: 1.75rem !important;
+  }
+
   .navigation-row--left a {
     padding-left: 0;
   }
